mobile overlay and media queries to make it happen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tilegrams</title>
+    <meta name = "viewport" content = "initial-scale=1.0, maximum-scale=1.0, width=device-width">
   </head>
   <body>
     <script type="text/javascript" src="main.js"></script>
