--- a/us-congressional-districts-2018.html
+++ b/us-congressional-districts-2018.html
@@ -42,7 +42,7 @@
       <div class='states'></div>
     </p>
     <script>
-      var inputDirectory = '/tilegrams/us-individual-states-congressional-districts/';
+      var inputDirectory = './tilegrams/us-individual-states-congressional-districts/';
       function fipsColor(fips) {
         const scaleTo = 56
         let number = parseInt(fips, 10) % scaleTo
