add link back to root in state breakout page

--- a/us-congressional-districts-2018.html
+++ b/us-congressional-districts-2018.html
@@ -76,7 +76,7 @@
   </head>
   <body>
     <div class='header'>
-      <img src='./logo.png' alt='Tilegrams by Pitch Interactive' />
+      <a href='./'><img src='./logo.png' alt='Tilegrams by Pitch Interactive' /></a>
     </div>
     <div class='wrapper'>
       <div class='descr'>
